[package]
name = "rise-and-shine"
version = "0.1.0"
authors = ["Folkert <folkert@folkertdev.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"
nrf52840-hal = { version = "0.12.1" }

